--- a/style.css
+++ b/style.css
@@ -3,5 +3,5 @@ body{
     background: purple;
     font-family: "PT Serif", serif;
     margin: 0px;
-    margin-botton: 100px;
+    margin-bottom: 100px;
 }
