--- a/style.css
+++ b/style.css
@@ -5,3 +5,16 @@ body{
     margin: 0px;
     margin-bottom: 100px;
 }
+.chamada{
+    background: ; rgb(205, 133, 145);
+    margin-top: ; 80px;
+    margin-bottom; : 80px;
+    display: flex;
+    justify-content: center;
+}
+header{
+    color: white
+    font-size: 40px;
+    border-bottom: solid 3px white;
+    padding: 20px;
+}
